@@ -1,1 +1,6 @@
 # ObjectAnalyzer
+
+```shell
+> javac .\ObjectAnalyzer.java .\ObjectAnalyzerTest.java
+> java --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED ObjectAnalyzerTest       
+```
